--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>My first Vue app</title>
-  <script src="https://unpkg.com/vue"></script>
-</head>
-<body>
-  <div id="app">
-    {{ message }}
-  </div>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>dbmove1</title><style>html{
+        font-size: 100px;
+      }</style><link href=/static/css/app.83b3c12c440bc1184cc6380e00a82696.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.333f22d7effd587d3cd3.js></script><script type=text/javascript src=/static/js/vendor.2d8cdfcef61de15d33ec.js></script><script type=text/javascript src=/static/js/app.813a2e8d4189a981c86b.js></script></body><script>(function (doc, win) {
+        var docEl = doc.documentElement,
+          resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+          recalc = function () {
+            var clientWidth = docEl.clientWidth;
+            if (!clientWidth) return;
+            if (clientWidth >= 640) {
+              docEl.style.fontSize = '100px';
+            } else {
+              docEl.style.fontSize = 100 * (clientWidth / 640) + 'px';
+            }
+          };
 
-  <script>
-    var app = new Vue({
-      el: '#app',
-      data: {
-        message: 'Hello Vue!'
-      }
-    })
-  </script>
-</body>
-</html>
+        if (!doc.addEventListener) return;
+        win.addEventListener(resizeEvt, recalc, false);
+        doc.addEventListener('DOMContentLoaded', recalc, false);
+      })(document, window);</script></html>
