--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>dbmove1</title><style>html{
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
+    <title>dbmove1</title>
+    
+    <style>
+      html{
         font-size: 100px;
-      }</style><link href=/static/css/app.83b3c12c440bc1184cc6380e00a82696.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.333f22d7effd587d3cd3.js></script><script type=text/javascript src=/static/js/vendor.2d8cdfcef61de15d33ec.js></script><script type=text/javascript src=/static/js/app.813a2e8d4189a981c86b.js></script></body><script>(function (doc, win) {
+      }
+    </style>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+  <script>
+    (function (doc, win) {
         var docEl = doc.documentElement,
           resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
           recalc = function () {
@@ -16,4 +32,6 @@
         if (!doc.addEventListener) return;
         win.addEventListener(resizeEvt, recalc, false);
         doc.addEventListener('DOMContentLoaded', recalc, false);
-      })(document, window);</script></html>
+      })(document, window);
+  </script>
+</html>
